syntax = "proto3";

import "google/api/annotations.proto";

package proto;

service GrpcServer{
	rpc FuncA(FuncaRes) returns (FuncaRep) {
      option (google.api.http) = {
      get: "/FuncA"
    };
  }

    rpc FuncB(FuncbRes) returns (FuncbRep) {
    option (google.api.http) = {
      post: "/FuncB"
      body: "*"
    };
  }
}

message FuncaRes {
    int64 ID = 1;
    string Name = 2;
}

message FuncaRep {
    int64 ID = 1;
    string Name = 2;
}

message FuncbRes {
    repeated int64 arry = 1; 
}

message FuncbRep {
    repeated int64 arry = 1; 
}